Quick fix for cutoff title

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -98,6 +98,7 @@ body {
 		  border: 0;
 		  color: #faf2ee;
 			cursor: pointer;
+      box-sizing: content-box;
 
 			input {
 				background-color: transparent;
